--- a/rpc-simple/src/main/resources/log4j.properties
+++ b/rpc-simple/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #OFF,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB,ALL
-log4j.rootLogger=info,systemOut
+log4j.rootLogger=debug,systemOut
 
 #输出到控制台
 log4j.appender.systemOut= org.apache.log4j.ConsoleAppender 
