--- a/xcall-server/src/main/resources/server-config.properties
+++ b/xcall-server/src/main/resources/server-config.properties
@@ -1,4 +1,5 @@
 # ZooKeeper \u670d\u52a1\u5668
-registry.address=192.168.0.65:2181
+#registry.address=192.168.0.65:2181
+registry.address=127.0.0.1:2181
 # RPC \u670d\u52a1\u5668
 server.address=127.0.0.1:8000
