--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,25 @@
     </modules>
     <name>rpc</name>
 
+
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <version>1.5.4.RELEASE</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot</artifactId>
+                <version>1.5.4.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-autoconfigure</artifactId>
+                <version>1.5.4.RELEASE</version>
+            </dependency>
             <!-- JUnit -->
             <dependency>
                 <groupId>junit</groupId>
@@ -33,7 +50,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>3.2.12.RELEASE</version>
+                <version>4.3.9.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
