--- a/xcall-client/pom.xml
+++ b/xcall-client/pom.xml
@@ -12,6 +12,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>1.5.4.RELEASE</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>1.5.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>1.5.4.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>com.lmx.xcall</groupId>
             <artifactId>xcall-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -102,5 +118,20 @@
             <artifactId>cglib</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                   <!-- <excludes>
+                        <exclude>com/lmx/xcall/client/RpcProxy.class</exclude>
+                    </excludes>-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
