--- a/xcall-client/src/main/resources/client-config.properties
+++ b/xcall-client/src/main/resources/client-config.properties
@@ -1,2 +1,3 @@
 # ZooKeeper \u670d\u52a1\u5668
-registry.address=192.168.0.65:2181
+registry.address=127.0.0.1:2181
+xcall.registryAddress=127.0.0.1:2181
