--- a/xcall-server/src/main/resources/log4j.properties
+++ b/xcall-server/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #OFF,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB,ALL
-log4j.rootLogger=debug,systemOut
+log4j.rootLogger=info,systemOut
 #输出到控制台
 log4j.appender.systemOut=org.apache.log4j.ConsoleAppender 
 log4j.appender.systemOut.layout=org.apache.log4j.PatternLayout 
